--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.28 09:24:30<br />
+<b>start</b> - 2022.10.29 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -37,13 +37,13 @@ USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, not updated, 0.0<br />
+USA_StAugustinePirateShip, not updated, 0.17999999999999972<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
-USA_Turtle, not updated, 0.7936507936507979<br />
+USA_Turtle, not updated, 0.970017636684311<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -68,7 +68,7 @@ Hungary_CsepelObol, not updated, 0.0<br />
 Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
 Czechia_KMZNAK, not updated, 0.0799999999999983<br />
 Luxembourg_LuxembourgFlag, not updated, 0.0<br />
-USA_MarioFireballVoid, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+USA_MarioFireballVoid, not updated, 0.0<br />
 USA_SpyGoggles, not updated, 0.0<br />
 Hungary_Farkas-erdo, not updated, 0.0<br />
 Hungary_CastleOfDiosgyor, not updated, 0.0<br />
@@ -148,35 +148,4 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.29999999999999716<br />
-USA_LightningBoltInSapphire, <b>updated</b>, 166, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 160, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove, not updated, 0.0<br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab, <b>updated</b>, 613, <a href="https://www.munzee.com/map/u12vje1zv/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HoratioTheHermitCrab.json" target="_blank">json</a> <b>100%</b><br />
-Australia_PiratePetesParrot, <b>updated</b>, 235, <a href="https://www.munzee.com/map/r1prduegj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_PiratePetesParrot.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_DownhamCheshireCat, <b>updated</b>, 251, <a href="https://www.munzee.com/map/u12723r3k/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_DownhamCheshireCat.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_TheQueensCrown, <b>updated</b>, 225, <a href="https://www.munzee.com/map/gcjuhy4jd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheQueensCrown.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_SandcastleInSheringham, <b>updated</b>, 214, <a href="https://www.munzee.com/map/u12v5qq8k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SandcastleInSheringham.json" target="_blank">json</a> <b>100%</b><br />
-USA_PiratesTreasure, <b>updated</b>, 418, <a href="https://www.munzee.com/map/dr6hj22x9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiratesTreasure.json" target="_blank">json</a> <b>100%</b><br />
-Australia_QueenslandKoala, <b>updated</b>, 210, <a href="https://www.munzee.com/map/r7hug0cqd/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QueenslandKoala.json" target="_blank">json</a> <b>100%</b><br />
-USA_GiraffeInGadsden, <b>updated</b>, 412, <a href="https://www.munzee.com/map/dn4c7jkn0/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GiraffeInGadsden.json" target="_blank">json</a> <b>100%</b><br />
-USA_AnaheimSapphire, <b>updated</b>, 72, <a href="https://www.munzee.com/map/9qh0s9gx9/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AnaheimSapphire.json" target="_blank">json</a> <b>100%</b><br />
-Finland_HelsinkiColour, <b>updated</b>, 695, <a href="https://www.munzee.com/map/ud9y2q5jc/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_HelsinkiColour.json" target="_blank">json</a> <b>100%</b><br />
-USA_BearmomscoutersXmasPolarBear, <b>updated</b>, 238, <a href="https://www.munzee.com/map/dr4uw91wq/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BearmomscoutersXmasPolarBear.json" target="_blank">json</a> <b>100%</b><br />
-Germany_SkylarkFeldlerche, <b>updated</b>, 420, <a href="https://www.munzee.com/map/u33d8ch15/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SkylarkFeldlerche.json" target="_blank">json</a> <b>100%</b><br />
-Netherlands_MysteryBikeField, <b>updated</b>, 299, <a href="https://www.munzee.com/map/u15pksmmy/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_MysteryBikeField.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
-----felhasználók<br />
-BonnieB1_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6ewegy/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_GOTM.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.10.28 10:54:00<br />
-összesen 5369<br />
+USA_LakevillesSeaTurtle, <b>updated</b>, 987, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
