--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.29 01:10:08<br />
+<b>start</b> - 2022.10.29 15:13:42<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -148,9 +148,9 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, <b>updated</b>, 987, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
-USA_LightningBoltInSapphire, <b>updated</b>, 173, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 157, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
+USA_LakevillesSeaTurtle, not updated, 0.4000000000000057<br />
+USA_LightningBoltInSapphire, not updated, 0.7000000000000028<br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.0<br />
 USA_MontgomeryBaseball, not updated, 0.0<br />
@@ -173,8 +173,4 @@ Finland_HelsinkiColour kihagyva (100%), <br />
 USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
 Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-<b>stop</b> - 2022.10.29 01:40:24<br />
-összesen 1816<br />
+Australia_Brisbane, <b>updated</b>, 215, <a href="https://www.munzee.com/map/r7hg9wruj/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_Brisbane.json" target="_blank">json</a><br />
