--- a/feladat.html
+++ b/feladat.html
@@ -174,3 +174,4 @@ USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
 Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, <b>updated</b>, 215, <a href="https://www.munzee.com/map/r7hg9wruj/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_Brisbane.json" target="_blank">json</a><br />
+Australia_EgyptianMask, <b>updated</b>, 1227, <a href="https://www.munzee.com/map/r7hu4xdc9/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_EgyptianMask.json" target="_blank">json</a><br />
