--- a/feladat.html
+++ b/feladat.html
@@ -177,3 +177,4 @@ Australia_Brisbane, <b>updated</b>, 215, <a href="https://www.munzee.com/map/r7h
 Australia_EgyptianMask, <b>updated</b>, 1227, <a href="https://www.munzee.com/map/r7hu4xdc9/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_EgyptianMask.json" target="_blank">json</a><br />
 Germany_BerlinMunzeePin, <b>updated</b>, 663, <a href="https://www.munzee.com/map/u336wu956/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinMunzeePin.json" target="_blank">json</a><br />
 Germany_DiamantBerlin, <b>updated</b>, 170, <a href="https://www.munzee.com/map/u33df7ttu/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_DiamantBerlin.json" target="_blank">json</a><br />
+Germany_BerlinBear, <b>updated</b>, 774, <a href="https://www.munzee.com/map/u336sed86/14.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinBear.json" target="_blank">json</a><br />
