--- a/feladat.html
+++ b/feladat.html
@@ -178,3 +178,4 @@ Australia_EgyptianMask, <b>updated</b>, 1227, <a href="https://www.munzee.com/ma
 Germany_BerlinMunzeePin, <b>updated</b>, 663, <a href="https://www.munzee.com/map/u336wu956/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinMunzeePin.json" target="_blank">json</a><br />
 Germany_DiamantBerlin, <b>updated</b>, 170, <a href="https://www.munzee.com/map/u33df7ttu/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_DiamantBerlin.json" target="_blank">json</a><br />
 Germany_BerlinBear, <b>updated</b>, 774, <a href="https://www.munzee.com/map/u336sed86/14.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinBear.json" target="_blank">json</a><br />
+Germany_HonowWappen, <b>updated</b>, 145, <a href="https://www.munzee.com/map/u33dys629/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_HonowWappen.json" target="_blank">json</a><br />
