--- a/feladat.html
+++ b/feladat.html
@@ -179,3 +179,4 @@ Germany_BerlinMunzeePin, <b>updated</b>, 663, <a href="https://www.munzee.com/ma
 Germany_DiamantBerlin, <b>updated</b>, 170, <a href="https://www.munzee.com/map/u33df7ttu/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_DiamantBerlin.json" target="_blank">json</a><br />
 Germany_BerlinBear, <b>updated</b>, 774, <a href="https://www.munzee.com/map/u336sed86/14.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinBear.json" target="_blank">json</a><br />
 Germany_HonowWappen, <b>updated</b>, 145, <a href="https://www.munzee.com/map/u33dys629/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_HonowWappen.json" target="_blank">json</a><br />
+Canada_GatineauEvo, <b>updated</b>, 128, <a href="https://www.munzee.com/map/f244tv1bn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauEvo.json" target="_blank">json</a><br />
