--- a/feladat.html
+++ b/feladat.html
@@ -180,3 +180,4 @@ Germany_DiamantBerlin, <b>updated</b>, 170, <a href="https://www.munzee.com/map/
 Germany_BerlinBear, <b>updated</b>, 774, <a href="https://www.munzee.com/map/u336sed86/14.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinBear.json" target="_blank">json</a><br />
 Germany_HonowWappen, <b>updated</b>, 145, <a href="https://www.munzee.com/map/u33dys629/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_HonowWappen.json" target="_blank">json</a><br />
 Canada_GatineauEvo, <b>updated</b>, 128, <a href="https://www.munzee.com/map/f244tv1bn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauEvo.json" target="_blank">json</a><br />
+Germany_ColorsBonn, <b>updated</b>, 335, <a href="https://www.munzee.com/map/u1j02nz06/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_ColorsBonn.json" target="_blank">json</a> <b>100%</b><br />
