--- a/feladat.html
+++ b/feladat.html
@@ -189,3 +189,4 @@ Canada_HospitalLove, <b>updated</b>, 140, <a href="https://www.munzee.com/map/f2
 Hungary_Q94, <b>updated</b>, 110, <a href="https://www.munzee.com/map/u2mw4g3wx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Q94.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_ChristmasTreeInBudapest, <b>updated</b>, 197, <a href="https://www.munzee.com/map/u2mw74ev2/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ChristmasTreeInBudapest.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_RWG, <b>updated</b>, 63, <a href="https://www.munzee.com/map/u2mw70355/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_RWG.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_Grail, <b>updated</b>, 172, <a href="https://www.munzee.com/map/u2mw30kw9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Grail.json" target="_blank">json</a> <b>100%</b><br />
