--- a/feladat.html
+++ b/feladat.html
@@ -191,3 +191,4 @@ Hungary_ChristmasTreeInBudapest, <b>updated</b>, 197, <a href="https://www.munze
 Hungary_RWG, <b>updated</b>, 63, <a href="https://www.munzee.com/map/u2mw70355/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_RWG.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_Grail, <b>updated</b>, 172, <a href="https://www.munzee.com/map/u2mw30kw9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Grail.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_DVTKInMiskolc, <b>updated</b>, 138, <a href="https://www.munzee.com/map/u2w9xkpr1/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_DVTKInMiskolc.json" target="_blank">json</a><br />
+Hungary_Beagle, <b>updated</b>, 251, <a href="https://www.munzee.com/map/u2rqe9sxg/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Beagle.json" target="_blank">json</a> <b>100%</b><br />
