--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.29 15:13:42<br />
+<b>start</b> - 2022.10.29 17:59:48<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -148,51 +148,5 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.4000000000000057<br />
-USA_LightningBoltInSapphire, not updated, 0.7000000000000028<br />
-USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove, not updated, 0.0<br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, <b>updated</b>, 215, <a href="https://www.munzee.com/map/r7hg9wruj/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_Brisbane.json" target="_blank">json</a><br />
-Australia_EgyptianMask, <b>updated</b>, 1227, <a href="https://www.munzee.com/map/r7hu4xdc9/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_EgyptianMask.json" target="_blank">json</a><br />
-Germany_BerlinMunzeePin, <b>updated</b>, 663, <a href="https://www.munzee.com/map/u336wu956/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinMunzeePin.json" target="_blank">json</a><br />
-Germany_DiamantBerlin, <b>updated</b>, 170, <a href="https://www.munzee.com/map/u33df7ttu/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_DiamantBerlin.json" target="_blank">json</a><br />
-Germany_BerlinBear, <b>updated</b>, 774, <a href="https://www.munzee.com/map/u336sed86/14.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinBear.json" target="_blank">json</a><br />
-Germany_HonowWappen, <b>updated</b>, 145, <a href="https://www.munzee.com/map/u33dys629/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_HonowWappen.json" target="_blank">json</a><br />
-Canada_GatineauEvo, <b>updated</b>, 128, <a href="https://www.munzee.com/map/f244tv1bn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauEvo.json" target="_blank">json</a><br />
-Germany_ColorsBonn, <b>updated</b>, 335, <a href="https://www.munzee.com/map/u1j02nz06/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_ColorsBonn.json" target="_blank">json</a> <b>100%</b><br />
-Germany_BTHVN2020, <b>updated</b>, 1708, <a href="https://www.munzee.com/map/u1j06c9wg/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BTHVN2020.json" target="_blank">json</a> <b>100%</b><br />
-Canada_GatineauScarletTulip, <b>updated</b>, 77, <a href="https://www.munzee.com/map/f244tscr5/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauScarletTulip.json" target="_blank">json</a> <b>100%</b><br />
-Canada_RumballMachine, <b>updated</b>, 80, <a href="https://www.munzee.com/map/f246ffb0f/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_RumballMachine.json" target="_blank">json</a> <b>100%</b><br />
-Canada_OttawaFireworks, <b>updated</b>, 88, <a href="https://www.munzee.com/map/f246f3yj9/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaFireworks.json" target="_blank">json</a> <b>100%</b><br />
-Canada_HospitalLove, <b>updated</b>, 140, <a href="https://www.munzee.com/map/f246f0k0b/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_HospitalLove.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_Q94, <b>updated</b>, 110, <a href="https://www.munzee.com/map/u2mw4g3wx/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Q94.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_ChristmasTreeInBudapest, <b>updated</b>, 197, <a href="https://www.munzee.com/map/u2mw74ev2/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ChristmasTreeInBudapest.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_RWG, <b>updated</b>, 63, <a href="https://www.munzee.com/map/u2mw70355/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_RWG.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_Grail, <b>updated</b>, 172, <a href="https://www.munzee.com/map/u2mw30kw9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Grail.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_DVTKInMiskolc, <b>updated</b>, 138, <a href="https://www.munzee.com/map/u2w9xkpr1/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_DVTKInMiskolc.json" target="_blank">json</a><br />
-Hungary_Beagle, <b>updated</b>, 251, <a href="https://www.munzee.com/map/u2rqe9sxg/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Beagle.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_ElectricDebrecen, <b>updated</b>, 433, <a href="https://www.munzee.com/map/u2rq7fsvq/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ElectricDebrecen.json" target="_blank">json</a><br />
-Hungary_KodalysViolin, <b>updated</b>, 167, <a href="https://www.munzee.com/map/u2q4b5j10/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_KodalysViolin.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_SantaClaussSackKecskemet, <b>updated</b>, 174, <a href="https://www.munzee.com/map/u2q4bp67c/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_SantaClaussSackKecskemet.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_64color, <b>updated</b>, 66, <a href="https://www.munzee.com/map/u2mw4qzsx/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_64color.json" target="_blank">json</a> <b>100%</b><br />
+USA_LakevillesSeaTurtle, not updated, 0.5<br />
+USA_LightningBoltInSapphire, <b>updated</b>, 173, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
