--- a/feladat.html
+++ b/feladat.html
@@ -150,3 +150,50 @@ Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, 0.5<br />
 USA_LightningBoltInSapphire, <b>updated</b>, 173, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.29999999999999716<br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, not updated, 0.0<br />
+USA_MontgomeryBaseball, not updated, 0.0<br />
+USA_HanksBoots, not updated, 0.0<br />
+USA_ColorTheZoo, not updated, 0.0<br />
+Netherlands_SupermanVsBatman kihagyva (100%), <br />
+Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
+Slovakia_IcemenInLove, not updated, 0.0<br />
+Slovakia_TrencinCastle, not updated, 0.0<br />
+UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
+Australia_PiratePetesParrot kihagyva (100%), <br />
+UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
+UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
+UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
+USA_PiratesTreasure kihagyva (100%), <br />
+Australia_QueenslandKoala kihagyva (100%), <br />
+USA_GiraffeInGadsden kihagyva (100%), <br />
+USA_AnaheimSapphire kihagyva (100%), <br />
+Finland_HelsinkiColour kihagyva (100%), <br />
+USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
+Germany_SkylarkFeldlerche kihagyva (100%), <br />
+Netherlands_MysteryBikeField kihagyva (100%), <br />
+Australia_Brisbane, not updated, 0.0<br />
+Australia_EgyptianMask, not updated, 0.0<br />
+Germany_BerlinMunzeePin, not updated, 0.0<br />
+Germany_DiamantBerlin, not updated, 0.0<br />
+Germany_BerlinBear, not updated, 0.0<br />
+Germany_HonowWappen, not updated, 0.0<br />
+Canada_GatineauEvo, not updated, 0.0<br />
+Germany_ColorsBonn kihagyva (100%), <br />
+Germany_BTHVN2020 kihagyva (100%), <br />
+Canada_GatineauScarletTulip kihagyva (100%), <br />
+Canada_RumballMachine kihagyva (100%), <br />
+Canada_OttawaFireworks kihagyva (100%), <br />
+Canada_HospitalLove kihagyva (100%), <br />
+Hungary_Q94 kihagyva (100%), <br />
+Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
+Hungary_RWG kihagyva (100%), <br />
+Hungary_Grail kihagyva (100%), <br />
+Hungary_DVTKInMiskolc, not updated, 0.0<br />
+Hungary_Beagle kihagyva (100%), <br />
+Hungary_ElectricDebrecen, not updated, 0.0<br />
+Hungary_KodalysViolin kihagyva (100%), <br />
+Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
+Hungary_64color kihagyva (100%), <br />
+Hungary_ShieldBudapest, <b>updated</b>, 124, <a href="https://www.munzee.com/map/u2mw3fteq/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldBudapest.json" target="_blank">json</a><br />
