--- a/feladat.html
+++ b/feladat.html
@@ -197,3 +197,4 @@ Hungary_KodalysViolin kihagyva (100%), <br />
 Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
 Hungary_64color kihagyva (100%), <br />
 Hungary_ShieldBudapest, <b>updated</b>, 124, <a href="https://www.munzee.com/map/u2mw3fteq/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldBudapest.json" target="_blank">json</a><br />
+Hungary_ShieldMiskolc, <b>updated</b>, 118, <a href="https://www.munzee.com/map/u2w9xugxp/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldMiskolc.json" target="_blank">json</a><br />
