--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.29 17:59:48<br />
+<b>start</b> - 2022.10.29 19:35:01<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -149,7 +149,7 @@ UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, 0.5<br />
-USA_LightningBoltInSapphire, <b>updated</b>, 173, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.29999999999999716<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.0<br />
@@ -196,6 +196,15 @@ Hungary_ElectricDebrecen, not updated, 0.0<br />
 Hungary_KodalysViolin kihagyva (100%), <br />
 Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
 Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, <b>updated</b>, 124, <a href="https://www.munzee.com/map/u2mw3fteq/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldBudapest.json" target="_blank">json</a><br />
-Hungary_ShieldMiskolc, <b>updated</b>, 118, <a href="https://www.munzee.com/map/u2w9xugxp/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldMiskolc.json" target="_blank">json</a><br />
-Hungary_ShieldEger, <b>updated</b>, 122, <a href="https://www.munzee.com/map/u2w2rz2pb/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldEger.json" target="_blank">json</a><br />
+Hungary_ShieldBudapest, not updated, 0.0<br />
+Hungary_ShieldMiskolc, not updated, 0.0<br />
+Hungary_ShieldEger, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+Germany_city_Bonn, <b>updated</b>, <a href="https://www.munzee.com/map/u1j02rpfx/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Bonn.json" target="_blank">json</a><br />
+Hungary_city_Budapest, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw1keu9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Budapest.json" target="_blank">json</a><br />
+----felhasználók<br />
+<b>stop</b> - 2022.10.29 19:44:14<br />
+összesen 552<br />
