--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.10.29 19:35:01<br />
+<b>start</b> - 2022.10.30 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Hungary_VotiveChurch, not updated, -44.25000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -148,8 +148,8 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.5<br />
-USA_LightningBoltInSapphire, not updated, 0.0<br />
+USA_LakevillesSeaTurtle, not updated, 0.5999999999999943<br />
+USA_LightningBoltInSapphire, not updated, 0.30000000000000426<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.29999999999999716<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.0<br />
@@ -201,10 +201,6 @@ Hungary_ShieldMiskolc, not updated, 0.0<br />
 Hungary_ShieldEger, not updated, 0.0<br />
 ----csoportok<br />
 ----városok<br />
-Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
-Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
-Germany_city_Bonn, <b>updated</b>, <a href="https://www.munzee.com/map/u1j02rpfx/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Bonn.json" target="_blank">json</a><br />
-Hungary_city_Budapest, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw1keu9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Budapest.json" target="_blank">json</a><br />
 ----felhasználók<br />
-<b>stop</b> - 2022.10.29 19:44:14<br />
-összesen 552<br />
+<b>stop</b> - 2022.10.30 01:20:16<br />
+összesen 608<br />
