--- a/feladat.html
+++ b/feladat.html
@@ -22,3 +22,13 @@ USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
 Finland_Nurmijarvi, not updated, 0.9000000000000057<br />
 Finland_Hyvinkaa, <b>updated</b>, 380, <a href="https://www.munzee.com/map/udc8vwrpv/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Hyvinkaa.json" target="_blank">json</a><br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
+Netherlands_TeaAtGrandma, not updated, 0.0<br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 1.0<br />
+Australia_QueensGambit-Horse, <b>updated</b>, 135, <a href="https://www.munzee.com/map/r1prds3cr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QueensGambit-Horse.json" target="_blank">json</a><br />
