--- a/feladat.html
+++ b/feladat.html
@@ -32,3 +32,15 @@ Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, not updated, 1.0<br />
 Australia_QueensGambit-Horse, <b>updated</b>, 135, <a href="https://www.munzee.com/map/r1prds3cr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QueensGambit-Horse.json" target="_blank">json</a><br />
+USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
+USA_StAugustinePirateShip, not updated, 0.17999999999999972<br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
+USA_Turtle, <b>updated</b>, 589, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
