--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.10.31 01:10:11<br />
+<b>start</b> - 2022.11.01 06:37:07<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 0<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -21,7 +21,7 @@ USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
 Finland_Nurmijarvi, not updated, 0.9000000000000057<br />
-Finland_Hyvinkaa, <b>updated</b>, 380, <a href="https://www.munzee.com/map/udc8vwrpv/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Hyvinkaa.json" target="_blank">json</a><br />
+Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
@@ -31,7 +31,7 @@ Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, not updated, 1.0<br />
-Australia_QueensGambit-Horse, <b>updated</b>, 135, <a href="https://www.munzee.com/map/r1prds3cr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QueensGambit-Horse.json" target="_blank">json</a><br />
+Australia_QueensGambit-Horse, not updated, 0.0<br />
 USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
-USA_Turtle, <b>updated</b>, 589, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
+USA_Turtle, not updated, 0.2645502645502589<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -148,60 +148,5 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, <b>updated</b>, 1059, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
-USA_LightningBoltInSapphire, <b>updated</b>, 202, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 169, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove, not updated, 0.0<br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask, not updated, 1.0<br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.0<br />
-Canada_GatineauEvo, not updated, 0.0<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.0<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.0<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-Finland_city_Hyvinkaa, <b>updated</b>, <a href="https://www.munzee.com/map/udc8udkum/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_city_Hyvinkaa.json" target="_blank">json</a><br />
-----felhasználók<br />
-<b>stop</b> - 2022.10.31 02:01:34<br />
-összesen 3082<br />
+USA_LakevillesSeaTurtle, not updated, 0.7000000000000028<br />
+USA_LightningBoltInSapphire, <b>updated</b>, 186, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
