--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.01 07:09:25<br />
+<b>start</b> - 2022.11.01 07:56:54<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -150,7 +150,7 @@ Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, 0.7999999999999972<br />
 USA_LightningBoltInSapphire, not updated, 0.29999999999999716<br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 193, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.0<br />
 USA_MontgomeryBaseball, not updated, 0.0<br />
@@ -199,8 +199,4 @@ Hungary_64color kihagyva (100%), <br />
 Hungary_ShieldBudapest, not updated, 0.0<br />
 Hungary_ShieldMiskolc, not updated, 0.0<br />
 Hungary_ShieldEger, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-<b>stop</b> - 2022.11.01 07:22:20<br />
-összesen 774<br />
+Hungary_MunzeeLogo, <b>updated</b>, 498, <a href="https://www.munzee.com/map/u2mtbxcxh/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MunzeeLogo.json" target="_blank">json</a> <b>100%</b><br />
