--- a/feladat.html
+++ b/feladat.html
@@ -200,3 +200,4 @@ Hungary_ShieldBudapest, not updated, 0.0<br />
 Hungary_ShieldMiskolc, not updated, 0.0<br />
 Hungary_ShieldEger, not updated, 0.0<br />
 Hungary_MunzeeLogo, <b>updated</b>, 498, <a href="https://www.munzee.com/map/u2mtbxcxh/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MunzeeLogo.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_GreatChurch, <b>updated</b>, 152, <a href="https://www.munzee.com/map/u2rqkszmr/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_GreatChurch.json" target="_blank">json</a> <b>100%</b><br />
