--- a/feladat.html
+++ b/feladat.html
@@ -211,3 +211,4 @@ USA_WinterOlympics2018, <b>updated</b>, 656, <a href="https://www.munzee.com/map
 USA_R2D2, <b>updated</b>, 358, <a href="https://www.munzee.com/map/9zvwqnkce/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_R2D2.json" target="_blank">json</a> <b>100%</b><br />
 USA_TwinCitiesSnowman, <b>updated</b>, 692, <a href="https://www.munzee.com/map/9zvww0pfz/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TwinCitiesSnowman.json" target="_blank">json</a> <b>100%</b><br />
 USA_SimpsonsDonut, <b>updated</b>, 1339, <a href="https://www.munzee.com/map/9zvww043h/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SimpsonsDonut.json" target="_blank">json</a> <b>100%</b><br />
+USA_AppleValleyEagle, <b>updated</b>, 437, <a href="https://www.munzee.com/map/9zvww81r8/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValleyEagle.json" target="_blank">json</a><br />
