--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.01 07:56:54<br />
+<b>start</b> - 2022.11.01 10:02:00<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -199,17 +199,22 @@ Hungary_64color kihagyva (100%), <br />
 Hungary_ShieldBudapest, not updated, 0.0<br />
 Hungary_ShieldMiskolc, not updated, 0.0<br />
 Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo, <b>updated</b>, 498, <a href="https://www.munzee.com/map/u2mtbxcxh/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MunzeeLogo.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_GreatChurch, <b>updated</b>, 152, <a href="https://www.munzee.com/map/u2rqkszmr/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_GreatChurch.json" target="_blank">json</a> <b>100%</b><br />
-Canada_SpringInOttawa, <b>updated</b>, 287, <a href="https://www.munzee.com/map/f2469zt39/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_SpringInOttawa.json" target="_blank">json</a> <b>100%</b><br />
-Canada_OttawaNewYears, <b>updated</b>, 134, <a href="https://www.munzee.com/map/f24697y7y/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaNewYears.json" target="_blank">json</a> <b>100%</b><br />
-Canada_SummerInOttawa, <b>updated</b>, 303, <a href="https://www.munzee.com/map/f246ds0e9/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_SummerInOttawa.json" target="_blank">json</a> <b>100%</b><br />
-USA_TheAppleValleyApple, <b>updated</b>, 171, <a href="https://www.munzee.com/map/9zvwrj4rs/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TheAppleValleyApple.json" target="_blank">json</a> <b>100%</b><br />
-USA_LighteksMinnesotaWild, <b>updated</b>, 304, <a href="https://www.munzee.com/map/9zvwrt9px/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LighteksMinnesotaWild.json" target="_blank">json</a><br />
-USA_ChristmasWreath, <b>updated</b>, 65, <a href="https://www.munzee.com/map/9zvwqwvbs/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChristmasWreath.json" target="_blank">json</a> <b>100%</b><br />
-USA_WinterOlympics2018, <b>updated</b>, 656, <a href="https://www.munzee.com/map/9zvwqqu74/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WinterOlympics2018.json" target="_blank">json</a> <b>100%</b><br />
-USA_R2D2, <b>updated</b>, 358, <a href="https://www.munzee.com/map/9zvwqnkce/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_R2D2.json" target="_blank">json</a> <b>100%</b><br />
-USA_TwinCitiesSnowman, <b>updated</b>, 692, <a href="https://www.munzee.com/map/9zvww0pfz/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TwinCitiesSnowman.json" target="_blank">json</a> <b>100%</b><br />
-USA_SimpsonsDonut, <b>updated</b>, 1339, <a href="https://www.munzee.com/map/9zvww043h/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SimpsonsDonut.json" target="_blank">json</a> <b>100%</b><br />
-USA_AppleValleyEagle, <b>updated</b>, 437, <a href="https://www.munzee.com/map/9zvww81r8/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValleyEagle.json" target="_blank">json</a><br />
-USA_DorothyToTheEmerald, <b>updated</b>, 538, <a href="https://www.munzee.com/map/9zvwy826s/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DorothyToTheEmerald.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_MunzeeLogo kihagyva (100%), <br />
+Hungary_GreatChurch kihagyva (100%), <br />
+Canada_SpringInOttawa kihagyva (100%), <br />
+Canada_OttawaNewYears kihagyva (100%), <br />
+Canada_SummerInOttawa kihagyva (100%), <br />
+USA_TheAppleValleyApple kihagyva (100%), <br />
+USA_LighteksMinnesotaWild, not updated, 0.0<br />
+USA_ChristmasWreath kihagyva (100%), <br />
+USA_WinterOlympics2018 kihagyva (100%), <br />
+USA_R2D2 kihagyva (100%), <br />
+USA_TwinCitiesSnowman kihagyva (100%), <br />
+USA_SimpsonsDonut kihagyva (100%), <br />
+USA_AppleValleyEagle, not updated, 0.0<br />
+USA_DorothyToTheEmerald kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+<b>stop</b> - 2022.11.01 10:11:15<br />
+összesen 554<br />
