--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.01 10:02:00<br />
+<b>start</b> - 2022.11.02 01:10:07<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
-USA_Turtle, not updated, 0.2645502645502589<br />
+USA_Turtle, not updated, 0.4409171075837719<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -148,9 +148,9 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.7999999999999972<br />
-USA_LightningBoltInSapphire, not updated, 0.29999999999999716<br />
-USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
+USA_LakevillesSeaTurtle, not updated, 1.0<br />
+USA_LightningBoltInSapphire, not updated, 1.0<br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.29999999999999716<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.0<br />
 USA_MontgomeryBaseball, not updated, 0.0<br />
@@ -174,47 +174,4 @@ USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
 Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask, not updated, 1.0<br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.0<br />
-Canada_GatineauEvo, not updated, 0.0<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.0<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.0<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.0<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-<b>stop</b> - 2022.11.01 10:11:15<br />
-összesen 554<br />
+Australia_EgyptianMask, <b>updated</b>, 1219, <a href="https://www.munzee.com/map/r7hu4xdc9/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_EgyptianMask.json" target="_blank">json</a> <b>100%</b><br />
